# netcdf-to-json-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt  ruff.toml  setup.cfg  test_environment.env
.github/workflows/: main.yml
.vim/: coc-settings.json
netcdf_to_json_backend/: app.py  config.py
tests/: conftest.py  example.nc  test_app.py
