[options]
zip_safe = False
packages = find:
package_dir =
include_package_data = True
python_requires = >=3.13

[options.packages.find]
where = .
exclude =
    tests

[options.package_data]
netcdf-to-json-backend = *.json

[mypy]
exclude = (.tox|build|dist|.eggs|docs/conf.py|venv|__init__.py)
ignore_missing_imports = True

[tool:pytest]
# avoid warning: https://github.com/pytest-dev/pytest-asyncio/issues/924#issuecomment-2326877541
asyncio_mode=auto
asyncio_default_fixture_loop_scope="function"
